Replaced commons.io.FileUtils by Java 17 Files.